[package]
name = "rust_gui_kit"
version = "0.1.8"
authors = ["bensatlantik"]
edition = "2021"
description = "A cross-platform GUI framework for Rust to simplify the creation of desktop applications."
repository = https://github.com/Rust-Libraries-Binaries/rust_gui_kit.git
license = "MIT"

[dependencies]
